added distinct sound for each key

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ var count = 0;
 // keyboard sound mapping
 var keyData = {
 	q: {
-		color: "purple",
+		color: "#f44242",
 		sound: new Howl({
 			src: ['sounds/bubbles.mp3']
 		})
 	},
 	w: {
-		color: "green",
+		color: "#f46e41",
 		sound: new Howl({
 			src: ['sounds/clay.mp3']
 		})
@@ -54,139 +54,139 @@ var keyData = {
 	r: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/corona.mp3']
 		})
 	},
 	t: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/dotted-spiral.mp3']
 		})
 	},
 	y: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/flash-1.mp3']
 		})
 	},
 	u: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/flash-2.mp3']
 		})
 	},
 	i: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/flash-3.mp3']
 		})
 	},
 	o: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/glimmer.mp3']
 		})
 	},
 	p: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/moon.mp3']
 		})
 	},
 	a: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/pinwheel.mp3']
 		})
 	},
 	s: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/piston-1.mp3']
 		})
 	},
 	d: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/piston-2.mp3']
 		})
 	},
 	f: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/piston-3.mp3']
 		})
 	},
 	g: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/prism-1.mp3']
 		})
 	},
 	h: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/prism-2.mp3']
 		})
 	},
 	j: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/prism-3.mp3']
 		})
 	},
 	k: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/splits.mp3']
 		})
 	},
 	l: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/squiggle.mp3']
 		})
 	},
 	z: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/strike.mp3']
 		})
 	},
 	x: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/suspension.mp3']
 		})
 	},
 	c: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/timer.mp3']
 		})
 	},
 	v: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/ufo.mp3']
 		})
 	},
 	b: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/veil.mp3']
 		})
 	},
 	n: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/wipe.mp3']
 		})
 	},
 	m: {
 		color: "yellow",
 		sound: new Howl({
-			src: ['sounds/confetti.mp3']
+			src: ['sounds/zig-zag.mp3']
 		})
 	}
 };
