added distinct colors for each key

--- a/index.html
+++ b/index.html
@@ -46,145 +46,145 @@ var keyData = {
 		})
 	},
 	e: {
-		color: "yellow",
+		color: "#f49a41",
 		sound: new Howl({
 			src: ['sounds/confetti.mp3']
 		})
 	},
 	r: {
-		color: "yellow",
+		color: "#f4c441",
 		sound: new Howl({
 			src: ['sounds/corona.mp3']
 		})
 	},
 	t: {
-		color: "yellow",
+		color: "#eef441",
 		sound: new Howl({
 			src: ['sounds/dotted-spiral.mp3']
 		})
 	},
 	y: {
-		color: "yellow",
+		color: "#caf441",
 		sound: new Howl({
 			src: ['sounds/flash-1.mp3']
 		})
 	},
 	u: {
-		color: "yellow",
+		color: "#a0f441",
 		sound: new Howl({
 			src: ['sounds/flash-2.mp3']
 		})
 	},
 	i: {
-		color: "yellow",
+		color: "#58f441",
 		sound: new Howl({
 			src: ['sounds/flash-3.mp3']
 		})
 	},
 	o: {
-		color: "yellow",
+		color: "#41f45e",
 		sound: new Howl({
 			src: ['sounds/glimmer.mp3']
 		})
 	},
 	p: {
-		color: "yellow",
+		color: "#41f49d",
 		sound: new Howl({
 			src: ['sounds/moon.mp3']
 		})
 	},
 	a: {
-		color: "yellow",
+		color: "#41f4d9",
 		sound: new Howl({
 			src: ['sounds/pinwheel.mp3']
 		})
 	},
 	s: {
-		color: "yellow",
+		color: "#41d9f4",
 		sound: new Howl({
 			src: ['sounds/piston-1.mp3']
 		})
 	},
 	d: {
-		color: "yellow",
+		color: "#41a0f4",
 		sound: new Howl({
 			src: ['sounds/piston-2.mp3']
 		})
 	},
 	f: {
-		color: "yellow",
+		color: "#4182f4",
 		sound: new Howl({
 			src: ['sounds/piston-3.mp3']
 		})
 	},
 	g: {
-		color: "yellow",
+		color: "#4161f4",
 		sound: new Howl({
 			src: ['sounds/prism-1.mp3']
 		})
 	},
 	h: {
-		color: "yellow",
+		color: "#4641f4",
 		sound: new Howl({
 			src: ['sounds/prism-2.mp3']
 		})
 	},
 	j: {
-		color: "yellow",
+		color: "#6141f4",
 		sound: new Howl({
 			src: ['sounds/prism-3.mp3']
 		})
 	},
 	k: {
-		color: "yellow",
+		color: "#7f41f4",
 		sound: new Howl({
 			src: ['sounds/splits.mp3']
 		})
 	},
 	l: {
-		color: "yellow",
+		color: "#9a41f4",
 		sound: new Howl({
 			src: ['sounds/squiggle.mp3']
 		})
 	},
 	z: {
-		color: "yellow",
+		color: "#c141f4",
 		sound: new Howl({
 			src: ['sounds/strike.mp3']
 		})
 	},
 	x: {
-		color: "yellow",
+		color: "#e241f4",
 		sound: new Howl({
 			src: ['sounds/suspension.mp3']
 		})
 	},
 	c: {
-		color: "yellow",
+		color: "#f441e5",
 		sound: new Howl({
 			src: ['sounds/timer.mp3']
 		})
 	},
 	v: {
-		color: "yellow",
+		color: "#f441be",
 		sound: new Howl({
 			src: ['sounds/ufo.mp3']
 		})
 	},
 	b: {
-		color: "yellow",
+		color: "#f441a6",
 		sound: new Howl({
 			src: ['sounds/veil.mp3']
 		})
 	},
 	n: {
-		color: "yellow",
+		color: "#f4417f",
 		sound: new Howl({
 			src: ['sounds/wipe.mp3']
 		})
 	},
 	m: {
-		color: "yellow",
+		color: "#f44141",
 		sound: new Howl({
 			src: ['sounds/zig-zag.mp3']
 		})
