refactored onFrame function

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@ function onFrame(event){
 	for (var i = 0; i < circles.length; i++) {
 		circles[i].fillColor.hue += 1;
 		circles[i].scale(.9);
+		// if circle has disappeared, remove from array
+		if (circles[i].area < 1) {
+			circles[i].remove();
+			circles.splice(i,1);
+			i--;
+		}
 	}
 }
 
